[package]
name = "aardwolf"
version = "0.1.0"
authors = ["Petr Nevyhoštěný <petr.nevyhosteny@gmail.com>"]
edition = "2018"

[dependencies]
lazycell = "1.2"
yaml-rust = "0.4.3"
clap = "2.33"
petgraph = "0.5.0"
term = "0.6.1"
unicode-width = "0.1.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
