[tool.poetry]
name = "aardwolf_tools"
version = "0.1.0"
description = "Tools for aiding the development of Aardwolf-related projects, written in Python"
authors = ["Petr Nevyhoštěný <petr.nevyhosteny@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
