[tool.poetry]
name = "thesis"
version = "0.1.0"
description = ""
authors = ["Petr Nevyhoštěný <petr.nevyhosteny@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
aardwolf = { path = "../../frontends/python/" }

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
