[tool.poetry]
name = "aardwolf"
version = "0.1.0"
description = "Python frontend for Aardwolf fault localization tool"
authors = ["Petr Nevyhoštěný <petr.nevyhosteny@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
